--- a/src/app/shot-list/shot-list.component.html
+++ b/src/app/shot-list/shot-list.component.html
@@ -1,3 +1,8 @@
 <p>
   Total:{{getTotal()}}
 </p>
+<div class="card card-block" *ngFor="let s of shotlist">
+  <h3 class="card-title">{{s.num}}</h3>
+  <p>{{s.displayYrdsDist()}}yrd</p>
+  <p>{{s.dist}}m</p>
+</div>
