--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,28 @@
 <div>
   <app-load-round></app-load-round>
 </div>
+<div id="map" class="map">
+  <script>
+    var map = new ol.Map({
+      layers: [
+        new ol.layer.Tile({
+          source: new ol.source.OSM()
+        })
+      ],
+      target: 'map',
+      controls: ol.control.defaults({
+        attributionOptions: /** @type {olx.control.AttributionOptions} */ ({
+          collapsible: false
+        })
+      }),
+      view: new ol.View({
+        center: [0, 0],
+        zoom: 2
+      })
+    });
+
+  </script>
+</div>
 <div>
   <app-shot-list></app-shot-list>
 </div>
