--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,8 @@
       <app-map></app-map>
     </div>
    </div>
+   <div class="row" style="height:10px">
+     Bottom margin
+   </div>
 </div>
 
