--- a/src/app/shot-list/shot-list.component.html
+++ b/src/app/shot-list/shot-list.component.html
@@ -2,6 +2,17 @@
   <p>
     Total:{{getTotal()}}
   </p>
+  <p-accordion>
+    <p-accordionTab *ngFor="let s of getShots()" >
+      <p-header>
+          <select (input)='setHole(s.num,$event.target.value)' [value]='s.hole'>
+              <option *ngFor="let h of getHoleList()">{{h}}</option>
+            </select>
+        <span>{{s.hole}} : {{s.num}}</span>
+      </p-header>
+       <span>{{s.displayYrdsDist()}}yrd</span>
+    </p-accordionTab>
+  </p-accordion>
   <ul style="height: 500px">
     <li *ngFor="let s of getShots()" >
       <div class="card card-block" style="height:150px; overflow-y:auto"   >
