confirmation dialog for delete

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,3 +2,4 @@
   
 </div>
 <p-contextMenu appendTo="body" [target]="map" [global]="false" [model]="items"></p-contextMenu>
+<p-confirmDialog></p-confirmDialog>
