--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,22 @@
 
-<div class="container">
-  <div class="row">
+<div id="container">
+  <div >
       <h1>
           {{title}}
-        </h1>
+      </h1>
   </div>
-  <div class="row">
+  <div >
       <app-load-round></app-load-round>
   </div>
-  <div class="row" >
-    <div class="col-xs-4">
+  <div  >
+    <div id="shot-list-div">
       <app-shot-list></app-shot-list>
     </div>
-    <div class="col-xs-8">
+    <div >
       <app-map ></app-map>
     </div>
    </div>
-   <div class="row" style="height:10px">
+   <div >
      Bottom margin
    </div>
 </div>
