--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,4 @@
-<div id='map' #map (contextmenu)='MenuHandler($event)' style='height:500px'>
+<div id='map' #map (contextmenu)='MenuHandler($event)'>
   
 </div>
 <p-contextMenu appendTo="body" [target]="map" [global]="false" [model]="items"></p-contextMenu>
