--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div id="container">
+<section >
   <div >
       <h1>
           {{title}}
@@ -8,16 +8,16 @@
   <div >
       <app-load-round></app-load-round>
   </div>
-  <div  >
-    <div id="shot-list-div">
+  <div  class="container">
+    <span class="shot-list">
       <app-shot-list></app-shot-list>
-    </div>
-    <div >
+    </span>
+    <span class="course-map">
       <app-map ></app-map>
-    </div>
+    </span>
    </div>
    <div >
      Bottom margin
    </div>
-</div>
+  </section>
 
